--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,8 @@ jobs:
         name: Authenticate to GCP
         with:
          project_id: 'cs1660-project2-451719' # update with your project ID
-         workload_identity_provider: 'projects/448579171251/locations/global/workloadIdentityPools/github/providers/my-repo'
+         #workload_identity_provider: 'projects/448579171251/locations/global/workloadIdentityPools/github/providers/my-repo' # update with your Workload Identity Pool
+         workload_identity_provider: 'projects/448579171251/locations/global/workloadIdentityPools/github/providers/my-repo'  # Update with the correct provider!
          service_account: 'github-actions@cs1660-project2-451719.iam.gserviceaccount.com'
 
 
